# bytevm

./: CHANGELOG.md  Cargo.toml  README.md  release-please-config.json
.github/workflows/: benchmark.yml  ci.yml  publish.yml  release.yml  test.yml
benches/: bytecode.rs  fib.rs  functioncall.rs  loop.rs  while.rs
examples/: fib.rs  math.rs
src/: builder.rs  lib.rs  program.rs  runtime.rs  stack.rs  variant.rs  vm.rs
tests/: arrays.rs  controlflow.rs  dictionary.rs  fib.rs  functions.rs  math.rs  variables.rs
