[package]
name = "bytevm"
description = "A simple bytecode virtual machine"
keywords = ["vm", "bytecode", "interpreter"]
categories = ["virtualization"]
license = "MIT"
repository = "https://github.com/burdockcascade/bytevm"
version = "0.4.1"
edition = "2024"

[dependencies]
log = "0.4.27"

[dev-dependencies]
simplelog = "0.12.2"
criterion = "0.5.1"

[[bench]]
name = "fib"
harness = false

[[bench]]
name = "while"
harness = false

[[bench]]
name = "functioncall"
harness = false