[package]
name = "bytevm"
description = "A tiny bytecode virtual machine"
keywords = ["bytecode", "interpreter", "runtime", "vm"]
categories = ["virtualization"]
license = "MIT"
repository = "https://github.com/burdockcascade/bytevm"
version = "0.5.0"
edition = "2024"

[dependencies]
log = "0.4.27"

[dev-dependencies]
simplelog = "0.12.2"